# rakun-core-python

./: Cargo.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
src/: chat.rs  chat_service.rs  lib.rs  main.rs  service.rs
src/chat/: behaviour.rs  chat.rs  message.rs  mod.rs
src/rakun/: service.rs
