[package]
name = "py_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
libp2p = { version = "0.46.1", features = ["tcp-tokio"] }
libp2p-tcp = "0.34.0"
pyo3-asyncio = { version = "0.16", features = ["tokio-runtime"] }
futures = "0.3.21"
tokio = "1.20.0"
pyo3-log = "0.6.0"